fix logout button position on mobile

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -110,6 +110,10 @@ input {
 
 }
 
+.sidebar form {
+  padding: .5rem 1rem;
+}
+
 .bg-trintel {
   background-color: #54617f !important;
 }
